--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ header .menu a:hover::after {
 
 /* Secciones */
 .section {
-    margin-top: 40px;
+    margin-top: 20px;
     padding: var(--padding-seccion);
     min-height: 100vh;
     width: 100%;
@@ -200,6 +200,14 @@ header .menu a:hover::after {
 .btn-gradiente:hover {
     background: linear-gradient(90deg, #007bff, #0d6efd);
     transform: scale(1.05);
+}
+
+@media (max-width: 768px) {
+    .inicio-textoI {
+        font-size: 1rem;
+        margin-bottom: 1rem;
+        margin-top: 5rem;
+    }
 }
 
 
@@ -355,7 +363,7 @@ footer {
     }
 
     .quienes h2 {
-        margin-top: 40px;
+        margin-top: 120px;
     }
 }
 
@@ -1107,6 +1115,17 @@ footer {
     }
 }
 
+.alert {
+    color: red;
+}
+
+
+@media (max-width: 768px) {
+    .form-container {
+        margin-top: 120px;
+    }
+}
+
 
 
 
@@ -1429,7 +1448,7 @@ footer {
     text-align: center;
     font-size: 3rem;
     color: var(--color-principal);
-    margin-bottom: 40px;
+    margin-bottom: 20px;
 }
 
 .perfil-card {
@@ -1737,7 +1756,7 @@ footer {
 
 /* Label alineado a la izquierda */
 .perfil-form .field-row label {
-    width: 120px;                   /* Ajusta si quieres más ancho */
+    width: 120px;                   
     font-weight: bold;
     color: #444;
     display: inline-block;
@@ -1756,6 +1775,10 @@ footer {
     margin-bottom: 15px;
 }
 
+.perfil-form p {
+    margin-bottom: 10px;
+}
+
 /* Hover */
 .perfil-form .field-row input:hover {
     border-color: #4e73df;
@@ -1766,6 +1789,29 @@ footer {
     border-color: #4e73df;
     box-shadow: 0 0 6px rgba(78, 115, 223, 0.4);
     outline: none;
+}
+
+@media (max-width: 768px) {
+    .perfil-form .field-row input {
+        width: 110px;
+        flex: 1;
+        padding: 10px 12px;
+        margin-left: 1px;
+        border: 1px solid #ccc;
+        border-radius: 8px;
+        font-size: 14px;
+        background: #fdfdfd;
+        transition: .2s ease-in-out;
+        margin-bottom: 15px;
+    }
+
+    .perfil-form .field-row label {
+        width: 70px;                   
+        font-weight: bold;
+        color: #444;
+        display: inline-block;
+        margin-right: 1px;
+    }
 }
 
 
